<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/settings_settings_t"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/imageButtonClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:padding="8dp"
                    app:srcCompat="@drawable/ic_close" />
            </LinearLayout>

            <Switch
                android:id="@+id/switchSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/settings_suggestions"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/switchStorage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/settings_storage"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/settings_h2_regles"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textView3"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/settings_h2_regles_p1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/settings_h2_regles_p2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView7"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/settings_h2_regles_p3"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/settings_h2_regles_p4"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView10"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/settings_h2_regles_p4bis"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView100"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/settings_h2_regles_p4ter"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView9"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/settings_h2_points"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/settings_h2_regles_p5"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView12"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/settings_h2_regles_p6"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView12bis"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/settings_h2_regles_p6bis"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView13"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/settings_h2_regles_p7"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView14"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/settings_h2_about"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewWebsite"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/settings_h2_regles_p8"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewPlaystore"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/settings_h2_regles_p9"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</LinearLayout>